--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,22 +1,23 @@
 name: my_proj
 description: A new Flutter project.
-publish_to: 'none'
+publish_to: "none"
 version: 1.0.0+1
 environment:
   sdk: ">=2.7.0 <3.0.0"
 dependencies:
   flutter:
     sdk: flutter
-  cupertino_icons: ^1.0.2
+  cupertino_icons: ^1.0.0
   font_awesome_flutter: ^8.11.0
   geolocator: ^6.1.13
   http: ^0.12.2
   flutter_spinkit: ^4.1.2+1
-  flutter_sequence_animation: "^3.0.0"
+  flutter_sequence_animation: ^3.0.0
   animated_text_kit: ^3.1.0
   firebase_core: ^0.5.3
-  firebase_auth: ^0.18.4+1  
+  firebase_auth: ^0.18.4+1
   cloud_firestore: ^0.14.4
+  modal_progress_hud: ^0.1.3
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -29,7 +30,7 @@ flutter:
   fonts:
     - family: LobsterTwo
       fonts:
-          - asset: fonts/Lobster_Two/LobsterTwo-Regular.ttf
-          - asset: fonts/Lobster_Two/LobsterTwo-Italic.ttf
-          - asset: fonts/Lobster_Two/LobsterTwo-Bold.ttf
-          - asset: fonts/Lobster_Two/LobsterTwo-BoldItalic.ttf
+        - asset: fonts/Lobster_Two/LobsterTwo-Regular.ttf
+        - asset: fonts/Lobster_Two/LobsterTwo-Italic.ttf
+        - asset: fonts/Lobster_Two/LobsterTwo-Bold.ttf
+        - asset: fonts/Lobster_Two/LobsterTwo-BoldItalic.ttf
